fixed alignment of buy buttons and options table

--- a/styles/global.css
+++ b/styles/global.css
@@ -78,11 +78,16 @@ header .logo {
     height: 400px;
     width: 150px;
     border-color: rgb(43, 46, 220);
-    background-color: rgb(230, 230, 234);
+    background-color: azure;
     border-style: solid;
     border-width: 5px;
     margin-top: 20px;
     display: inline-block;
+    font-size: 25px;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-style: italic;
+    font-weight: bold;
+    padding-left: 75px;
 }
 .buy-now {
     height: 50px;
@@ -103,6 +108,22 @@ header .logo {
 }
 .buy {
     display: flex;
-    margin-right: 60px;
-    margin-left: 438px;
+    margin-right: 290px;
+    margin-left: 555px;
+    position: static;
+}
+
+.table {
+    border-right: 0px;
+    position: absolute;
+    margin-top: 90px;
+    margin-left: 280px;
+    line-height: 40px;
+    width: 890px;
+}
+
+td {
+    border-bottom: 1px solid red;
+    font-size: 20px;
+    column-width: 200px;
 }
